tests/errors/init_state/borrow_precondition/shared_borrow_of_moved.err.expected
error: at 6:5: [INIT-BorrowStateMismatch] In function 'f', block 'entry': cannot create & of 'x': place must be initialized at borrow, but is moved-from
   |
 6 |     r = &x;
   |     ^^^^^^
